Shang New Live/src/objects/RS_Monthly_Outstanding__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Foreign__c</fullName>
        <label>Amount (Foreign)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Local__c</fullName>
        <label>Amount (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Paid_Foreign__c</fullName>
        <label>Amount Paid (Foreign)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Paid_Local__c</fullName>
        <label>Amount Paid (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comm_Tax_Amount_Foreign__c</fullName>
        <label>Comm Tax Amount (Foreign)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comm_Tax_Amount_Local__c</fullName>
        <label>Comm Tax Amount (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outstanding_Amount_Foreign__c</fullName>
        <label>Outstanding Amount (Foreign)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outstanding_Amount_Local__c</fullName>
        <label>Outstanding Amount (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Foreign__c</fullName>
        <label>Total Amount (Foreign)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Local__c</fullName>
        <label>Total Amount (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>RS Monthly Outstanding</label>
    <nameField>
        <label>RS_Monthly_Outstanding Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RS Monthly Outstanding</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>